--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"helmet": "^5.0.2",
-		"morgan": "^1.10.0"
+		"mongoose": "^6.2.6",
+		"morgan": "^1.10.0",
+		"validator": "^13.7.0"
 	}
 }
