--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"helmet": "^5.0.2",
 		"mongoose": "^6.2.6",
 		"morgan": "^1.10.0",
+		"swagger-jsdoc": "^6.1.0",
+		"swagger-ui-express": "^4.3.0",
 		"validator": "^13.7.0"
 	}
 }
